# pdfpoppler

./: .gitignore  CMakeLists.txt  build.sh  example.c  pdfpoppler.pc.in  pdfpopplerConfig.cmake.in
include/: pdfpoppler.h
src/: pdfpoppler.c
